--- a/Diagram/app/src/main/res/values/strings.xml
+++ b/Diagram/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Diagram</string>
+    <string name="app_name">DiaGram</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -7,5 +7,8 @@
     <string name="title_home">Home</string>
     <string name="title_timeline">Timeline</string>
     <string name="title_profile">Profile</string>
-    <string name="title_activity_navigation">Diagram</string>
+    <string name="title_activity_navigation">DiaGram</string>
+    <string name="title_add_post">New Post</string>
+
+
 </resources>
